--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
    <h1>De muzieknotatie</h1>
    <h2>Muzieknotatie is een visueel systeem voor het opschrijven van muziek, dat de toonhoogte, duur en andere uitvoeringsdetails van een muziekstuk weergeeft, zodat het later door muzikanten gelezen en uitgevoerd kan worden. Het bevat elementen zoals <s>notenbalken</s>, <s>sleutels</s>, <u>noten</u> en symbolen die <u>ritme</u>, <u>tempo</u>, <s>dynamiek</s> en <s>articulatie</s> aangeven.</h2>
    <h3>Noten:</h3>
-   <h4>symbolen die de toonhoogte en duur van klanken weergeven</h4>
-    <p style="color: blue; font-size: 18px;">Bonjour</p>
+   <h4 style="color: blue; font-size: 18px;">symbolen die de toonhoogte en duur van klanken weergeven</h4>
+  
 
    <ul>
   <li>letternamen (A, B, C, D, E, F, G)</li>
@@ -92,5 +92,6 @@
 
 
    
+
 
 
