--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <style>
       body  { 
-        background-color: lightblue;
+        background-color: RGB(230, 0, 126);
         }
       h1  { 
         color: navy;
@@ -107,6 +107,7 @@
 
 
    
+
 
 
 
