--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <li> syllabische namen (Do, Re, Mi, Fa, Sol, La, Si)</li>
   </ul>
   <h3>Ritme:</h3>
-  <h4style="color: rgb(0, 255, 0)">de afwisseling van lange en korte tonen, die samen een patroon of 'hartslag' vormen die een muzikaal stuk zijn  herkenbare flow geeft</h4>
+  <h4style="color: RGB(53, 255, 67)">de afwisseling van lange en korte tonen, die samen een patroon of 'hartslag' vormen die een muzikaal stuk zijn  herkenbare flow geeft</h4>
   <ul>
   <li>noot</li>
   <li>rust</li>
@@ -107,6 +107,7 @@
 
 
    
+
 
 
 
