--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
   <li> syllabische namen (Do, Re, Mi, Fa, Sol, La, Si)</li>
   </ul>
   <h3>Ritme:</h3>
-  <h4style="color: RGB(53, 255, 67)">de afwisseling van lange en korte tonen, die samen een patroon of 'hartslag' vormen die een muzikaal stuk zijn  herkenbare flow geeft</h4>
+  <h4 style="color: RGB(53, 255, 67)">de afwisseling van lange en korte tonen, die samen een patroon of 'hartslag' vormen die een muzikaal stuk zijn  herkenbare flow geeft</h4>
   <ul>
   <li>noot</li>
   <li>rust</li>
   </ul>
   <h3>Tempoaanduidingen:</h3>
-  <h4>geven de snelheid van een stuk aan, met traditionele Italiaanse termen, die ook kunnen worden aangegeven in BPM (beats per minute)</h4>
+  <h4 style="color: RGB(53%, 25%, 67%)>geven de snelheid van een stuk aan, met traditionele Italiaanse termen, die ook kunnen worden aangegeven in BPM (beats per minute)</h4>
 <table border="1" cellpadding="5" cellspacing="0">
   <tr>
     <th>Italiaanse benaming</th>
@@ -107,6 +107,7 @@
 
 
    
+
 
 
 
