--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <li>rust</li>
   </ul>
   <h3>Tempoaanduidingen:</h3>
-  <h4 style="color: RGB(53%, 25%, 67%)>geven de snelheid van een stuk aan, met traditionele Italiaanse termen, die ook kunnen worden aangegeven in BPM (beats per minute)</h4>
+  <h4>geven de snelheid van een stuk aan, met traditionele Italiaanse termen, die ook kunnen worden aangegeven in BPM (beats per minute)</h4>
 <table border="1" cellpadding="5" cellspacing="0">
   <tr>
     <th>Italiaanse benaming</th>
@@ -107,6 +107,7 @@
 
 
    
+
 
 
 
