--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
    <ul>
   <li>letternamen (A, B, C, D, E, F, G)</li>
-  <li> syllabische namen (Do, Re, Mi, Fa, Sol, La, Si)</li>
+  <li style="color: #ff0000;" > syllabische namen (Do, Re, Mi, Fa, Sol, La, Si)</li>
   </ul>
   <h3>Ritme:</h3>
   <h4 style="color: RGB(53, 255, 67)">de afwisseling van lange en korte tonen, die samen een patroon of 'hartslag' vormen die een muzikaal stuk zijn  herkenbare flow geeft</h4>
@@ -107,6 +107,7 @@
 
 
    
+
 
 
 
