--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
 
    <ul>
-  <li>letternamen (A, B, C, D, E, F, G)</li>
+  <li style="color: RGB(53%, 25%, 67%)">letternamen (A, B, C, D, E, F, G)</li>
   <li style="color: #ff0000;" > syllabische namen (Do, Re, Mi, Fa, Sol, La, Si)</li>
   </ul>
   <h3>Ritme:</h3>
@@ -107,6 +107,7 @@
 
 
    
+
 
 
 
