--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <h3>Ritme:</h3>
   <h4 style="color: RGB(53, 255, 67)">de afwisseling van lange en korte tonen, die samen een patroon of 'hartslag' vormen die een muzikaal stuk zijn  herkenbare flow geeft</h4>
   <ul>
-  <li>noot</li>
-  <li>rust</li>
+  <li  style="color: #000000;">noot</li>
+  <li  style="color: #ffffff;">rust</li>
   </ul>
   <h3>Tempoaanduidingen:</h3>
   <h4>geven de snelheid van een stuk aan, met traditionele Italiaanse termen, die ook kunnen worden aangegeven in BPM (beats per minute)</h4>
@@ -107,6 +107,7 @@
 
 
    
+
 
 
 
