--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       h1  { 
         color: navy;
         text-align: center;
+        font-family: monospace, sans-serif;
          }
       p { 
         font-size: 14px;
@@ -107,6 +108,7 @@
 
 
    
+
 
 
 
