--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
          }
       p { 
         font-size: 14px;
+        text-decoration: underline;
         }
              
       
@@ -108,6 +109,7 @@
 
 
    
+
 
 
 
