--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <style>
       body  { 
         background-color: RGB(230, 0, 126);
-        background-image: url("mijn_afbeelding.jpg");
+        background-image: url("550x383.jpg");
         }
       h2  { 
         color: navy;
@@ -112,6 +112,7 @@
 
 
    
+
 
 
 
